i put links for the demo and repo's for the brews&blues

--- a/index.html
+++ b/index.html
@@ -202,10 +202,13 @@
         <div class="project-card">
             <img src="jazzbar.jpg" alt="">
             <h3>Project Brews & Blues</h3>
-            <p>Brews&Blues is a full-stack web application I built to create an engaging online platform for showcasing live music events and craft beers. The website connects users with upcoming performances while also providing detailed information about various craft beers.</p>
+            <p>
+                Brews & Blues is a full-stack web application I built to create an engaging online platform for showcasing live music events and craft beers.
+                The website connects users with upcoming performances while also providing detailed information about various craft beers.
+            </p>
             <div class="btn-group">
-                <div class="btn">Live Demo</div>
-                <div class="btn">Github Repo</div>
+                <a href="https://janysalinas.github.io/Brews-Blues/" target="_blank" class="btn">Live Demo</a>
+                <a href="https://github.com/JanySalinas/Brews-Blues" target="_blank" class="btn">GitHub Repo</a>
             </div>
         </div>
 
