Responsive navbar and mobile adjustments added

--- a/index.html
+++ b/index.html
@@ -224,13 +224,14 @@
 
         <div class="project-card">
             <img src="blog.jpg" alt="">
-            <h3>Project Wildcard Journal Blog </h3>
+            <h3>Project WDT</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, repudiandae.</p>
             <div class="btn-group">
-                <div class="btn">Live Demo</div>
-                <div class="btn">Github Repo</div>
+                <a href="https://your-app.onrender.com" target="_blank" class="btn">Live Demo</a>
+                <a href="https://github.com/JanySalinas/WDT-.git" target="_blank" class="btn">Github Repo</a>
             </div>
         </div>
+        
     </div>
     </section>
 
@@ -259,6 +260,14 @@
 
             <li>
                 <a href="#experience">Experience</a>
+            </li>
+
+            <li>
+                <a href="#recommendations">Recommendations</a>
+            </li>
+            
+            <li>
+                <a href="#skills">Skills</a>
             </li>
 
             <li>
