Responsive navbar and mobile adjustments added

--- a/index.html
+++ b/index.html
@@ -274,6 +274,9 @@
                 <a href="#projects">Projects</a>
             </li>
 
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
         </ul>
 
         <p class="copyright">© All Rights Reserved | Jany Salinas</p>
