--- a/index.html
+++ b/index.html
@@ -207,18 +207,18 @@
                 The website connects users with upcoming performances while also providing detailed information about various craft beers.
             </p>
             <div class="btn-group">
-                <a href="https://janysalinas.github.io/Brews-Blues/" target="_blank" class="btn">Live Demo</a>
+                <a href="https://brews-blues.onrender.com/drinks" target="_blank" class="btn">Live Demo</a>
                 <a href="https://github.com/JanySalinas/Brews-Blues" target="_blank" class="btn">GitHub Repo</a>
             </div>
         </div>
 
         <div class="project-card">
             <img src="todo.jpg" alt="">
-            <h3>Project To-Do list APi </h3>
+            <h3>Meme Central</h3>
             <p>A RESTful To-Do API built with Express.js and Sequelize, providing CRUD operations for managing tasks. It supports user authentication with JWT, allowing users to create, read, update, and delete their personal to-do lists.</p>
             <div class="btn-group">
-                <div class="btn">Live Demo</div>
-                <div class="btn">Github Repo</div>
+                <a href="https://memes-central.onrender.com/memes" target="_blank" class="btn">Live Demo</a>
+                <a href="https://github.com/JanySalinas/Memes-Central" target="_blank" class="btn">GitHub Repo</a>
             </div>
         </div>
 
