--- a/index.html
+++ b/index.html
@@ -212,22 +212,22 @@
             </div>
         </div>
 
-        <div class="project-card">
+        <!-- <div class="project-card">
             <img src="todo.jpg" alt="">
-            <h3>Meme Central</h3>
+            <h3>To Do List</h3>
             <p>A RESTful To-Do API built with Express.js and Sequelize, providing CRUD operations for managing tasks. It supports user authentication with JWT, allowing users to create, read, update, and delete their personal to-do lists.</p>
             <div class="btn-group">
                 <a href="https://memes-central.onrender.com/memes" target="_blank" class="btn">Live Demo</a>
                 <a href="https://github.com/JanySalinas/Memes-Central" target="_blank" class="btn">GitHub Repo</a>
             </div>
-        </div>
+        </div> -->
 
         <div class="project-card">
             <img src="blog.jpg" alt="">
             <h3>Project WDT</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, repudiandae.</p>
             <div class="btn-group">
-                <a href="https://your-app.onrender.com" target="_blank" class="btn">Live Demo</a>
+                <a href="https://wdt-2ngu.onrender.com/wdt.html#" target="_blank" class="btn">Live Demo</a>
                 <a href="https://github.com/JanySalinas/WDT-.git" target="_blank" class="btn">Github Repo</a>
             </div>
         </div>
