--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="modal-content">
                           <span class="close">&times;</span>
                           <h2>Contact Information</h2>
-                          <p><strong>Phone:</strong>  90 26 25 11</p>
+                          <p><strong>Phone:</strong> +47 90 26 25 11</p>
                           <p><strong>Address:</strong> Mauravegen </p>
                           <p><strong>Email:</strong> jany.salinas@hotmail.com</p>
                         </div>
@@ -218,15 +218,14 @@
             </div>
         </div>
 
-        <!-- <div class="project-card">
+        <div class="project-card">
             <img src="todo.jpg" alt="">
             <h3>To Do List</h3>
             <p>A RESTful To-Do API built with Express.js and Sequelize, providing CRUD operations for managing tasks. It supports user authentication with JWT, allowing users to create, read, update, and delete their personal to-do lists.</p>
             <div class="btn-group">
-                <a href="https://memes-central.onrender.com/memes" target="_blank" class="btn">Live Demo</a>
-                <a href="https://github.com/JanySalinas/Memes-Central" target="_blank" class="btn">GitHub Repo</a>
+                <a href="https://github.com/JanySalinas/To-do-API" target="_blank" class="btn">GitHub Repo</a>
             </div>
-        </div> -->
+        </div> 
 
         <div class="project-card">
             <img src="clockin.jpg" alt="">
