--- a/index.html
+++ b/index.html
@@ -215,6 +215,16 @@
     <div class="projects-grid">
 
         <div class="project-card">
+            <img src="crm.png" alt="">
+            <h3>Project Demo CRM-System</h3>
+            <p>The Mini CRM System is a RESTful customer management tool built with Node.js, Express, MySQL, and Sequelize. It provides full CRUD operations for managing customer records and logging activities, all secured by JWT-based authentication. With role-based access control for admins and sellers, the system ensures that only authorized users can perform sensitive operations. A modern, responsive frontend built with HTML, CSS, and JavaScript.</p>
+            <p>Ps: this is a demo under progress</p>
+            <div class="btn-group">
+                <a href="https://github.com/JanySalinas/CRM.git" target="_blank" class="btn">GitHub Repo</a>
+            </div>
+        </div> 
+
+        <div class="project-card">
             <img src="jazzbar.jpg" alt="">
             <h3>Project Brews & Blues</h3>
             <p>
